<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_whatIs"
            android:icon="@drawable/ic_description_black_48px"
            android:title="@string/menu_whatIsSumie" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_photo_black_48px"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_learn"
            android:icon="@drawable/ic_school_black_48px"
            android:title="@string/menu_Learn" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_black_48px"
            android:title="@string/menu_share" />
    </group>

</menu>
