<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/learn_text_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn0textH" />

        <TextView
            style="@style/learn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/learn6text"
            android:textAlignment="center" />

        <TextView
            style="@style/learn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn6text2"
            android:textAlignment="center" />

        <TextView
            style="@style/learn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/learn6text3"
            android:textAlignment="center" />

        <TextView
            style="@style/learn_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/learn6text4"
            android:textAlignment="center" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            style="@style/style_button_back"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/custom_button_back"
            android:onClick="button6back"
            android:text="Back" />

    </LinearLayout>
</ScrollView>