<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/learn_text_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp"
        android:paddingTop="32dp"
        android:text="@string/home"
        android:textColor="@color/colorAccent" />

    <TextView
        style="@style/learn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hometext"
        android:textAlignment="center" />

    <TextView
        style="@style/learn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hometext2"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/logo" />

</LinearLayout>